"payment form added"

--- a/src/app/adminboard/adminhome/adminhome.component.html
+++ b/src/app/adminboard/adminhome/adminhome.component.html
@@ -7,56 +7,46 @@
     </ol>
   </nav>
 
-
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
-<!------ Include the above in your HEAD tag ---------->
-
-<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" /> -->
-<div class="container">
+  <div class="container">
     <div class="row">
-    <div class="col-md-3">
-      <div class="card-counter primary">
-        <i class="fa fa-code-fork fa-2x"></i>
-        <span class="count-numbers">1220</span>
-        <span class="count-name">Total Appointments</span>
+        <div class="col-md-3 col-sm-6">
+            <div class="counter">
+                <div class="counter-icon">
+                    <i class="fa fa-globe"></i>
+                </div>
+                <span class="counter-value">0</span>
+                <h3>Web Designing</h3>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="counter blue">
+              <div class="counter-icon">
+                  <i class="fa fa-rocket"></i>
+              </div>
+              <span class="counter-value">0</span>
+              <h3>Web Development</h3>
+          </div>
       </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="counter">
+                <div class="counter-icon">
+                    <i class="fa fa-globe"></i>
+                </div>
+                <span class="counter-value">0</span>
+                <h3>Web Designing</h3>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div class="counter blue">
+                <div class="counter-icon">
+                    <i class="fa fa-rocket"></i>
+                </div>
+                <span class="counter-value">0</span>
+                <h3>Web Development</h3>
+            </div>
+        </div>
     </div>
-
-    <div class="col-md-3">
-      <div class="card-counter danger">
-        <i class="fa fa-ticket fa-2x"></i>
-        <span class="count-numbers">599</span>
-        <span class="count-name">Pending Appointments</span>
-      </div>
-    </div>
-
-    <div class="col-md-3">
-      <div class="card-counter success">
-        <i class="fa fa-database fa-2x"></i>
-        <span class="count-numbers">68</span>
-        <span class="count-name">Total Patient</span>
-      </div>
-    </div>
-
-    <div class="col-md-3">
-      <div class="card-counter info">
-        <i class="fa fa-users fa-2x"></i>
-        <span class="count-numbers">35</span>
-        <span class="count-name">Total Doctors</span>
-      </div>
-    </div>
-  </div>
 </div>
-
-
-<!-- This table is a Jquery Datatable plugin -->
-
-<!-- // this method if for data table
-// tuts: https://webdamn.com/how-to-use-datatables-in-angular-8/
-// https://datatables.net/examples/index
-import { DataTablesModule } from 'angular-datatables'; -->
 
 <h3  class="mt-5 text-center">All Patient List</h3>
 
