--- a/src/app/adminboard/adminhome/adminhome.component.css
+++ b/src/app/adminboard/adminhome/adminhome.component.css
@@ -1,136 +1,74 @@
-.card-counter{
-    box-shadow: 2px 2px 10px #DADADA;
-    margin: 5px;
-    padding: 20px 10px;
-    background-color: #fff;
-    height: 100px;
-    border-radius: 5px;
-    transition: .3s linear all;
-  }
-
-  .card-counter:hover{
-    box-shadow: 4px 4px 20px #DADADA;
-    transition: .3s linear all;
-  }
-
-  .card-counter.primary{
-    background-color: #007bff;
-    color: #FFF;
-  }
-
-  .card-counter.danger{
-    background-color: #ef5350;
-    color: #FFF;
-  }  
-
-  .card-counter.success{
-    background-color: #66bb6a;
-    color: #FFF;
-  }  
-
-  .card-counter.info{
-    background-color: #26c6da;
-    color: #FFF;
-  }  
-
-  .card-counter i{
-    font-size: 5em;
-    opacity: 0.2;
-  }
-
-  .card-counter .count-numbers{
-    position: absolute;
-    right: 35px;
-    top: 20px;
-    font-size: 32px;
-    display: block;
-  }
-
-  .card-counter .count-name{
-    position: absolute;
-    right: 35px;
-    top: 65px;
-    font-style: italic;
-    text-transform: capitalize;
-    opacity: 0.5;
-    display: block;
-    font-size: 18px;
-  }
-
-
-
-
-/* .grey-bg {  
-    background-color: #F5F7FA;
+.counter{
+  color: #f27f21;
+  font-family: 'Open Sans', sans-serif;
+  text-align: center;
+  height: 190px;
+  width: 190px;
+  padding: 30px 25px 25px;
+  margin: 0 auto;
+  border: 3px solid #f27f21;
+  border-radius: 20px 20px;
+  position: relative;
+  z-index: 1;
 }
-
-
-
-
-
-
-
-
-
-.card {
-    background-color: #fff;
-    border-radius: 10px;
-    border: none;
-    position: relative;
-    margin-bottom: 30px;
-    box-shadow: 0 0.46875rem 2.1875rem rgba(90,97,105,0.1), 0 0.9375rem 1.40625rem rgba(90,97,105,0.1), 0 0.25rem 0.53125rem rgba(90,97,105,0.12), 0 0.125rem 0.1875rem rgba(90,97,105,0.1);
+.counter:before,
+.counter:after{
+  content: "";
+  background: #f3f3f3;
+  border-radius: 20px;
+  box-shadow: 4px 4px 2px rgba(0,0,0,0.2);
+  position: absolute;
+  left: 15px;
+  top: 15px;
+  bottom: 15px;
+  right: 15px;
+  z-index: -1;
 }
-.l-bg-cherry {
-    background: linear-gradient(to right, #493240, #f09) !important;
-    color: #fff;
+.counter:after{
+  background: transparent;
+  width: 100px;
+  height: 100px;
+  border: 15px solid #f27f21;
+  border-top: none;
+  border-right: none;
+  border-radius: 0 0 0 20px;
+  box-shadow: none;
+  top: auto;
+  left: -10px;
+  bottom: -10px;
+  right: auto;
 }
-
-.l-bg-blue-dark {
-    background: linear-gradient(to right, #373b44, #4286f4) !important;
-    color: #fff;
+.counter .counter-icon{
+  font-size: 35px;
+  line-height: 35px;
+  margin: 0 0 15px;
+  transition: all 0.3s ease 0s;
 }
-
-.l-bg-green-dark {
-    background: linear-gradient(to right, #0a504a, #38ef7d) !important;
-    color: #fff;
+.counter:hover .counter-icon{ transform: rotateY(360deg); }
+.counter .counter-value{
+  color: #555;
+  font-size: 30px;
+  font-weight: 600;
+  line-height: 20px;
+  margin: 0 0 20px;
+  display: block;
+  transition: all 0.3s ease 0s;
 }
-
-.l-bg-orange-dark {
-    background: linear-gradient(to right, #a86008, #ffba56) !important;
-    color: #fff;
+.counter:hover .counter-value{ text-shadow: 2px 2px 0 #d1d8e0; }
+.counter h3{
+  font-size: 17px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin: 0 0 15px;
 }
-
-.card .card-statistic-3 .card-icon-large .fas, .card .card-statistic-3 .card-icon-large .far, .card .card-statistic-3 .card-icon-large .fab, .card .card-statistic-3 .card-icon-large .fal {
-    font-size: 110px;
+.counter.blue{
+  color: #4accdb;
+  border-color: #4accdb;
 }
-
-.card .card-statistic-3 .card-icon {
-    text-align: center;
-    line-height: 50px;
-    margin-left: 15px;
-    color: #000;
-    position: absolute;
-    right: -5px;
-    top: 20px;
-    opacity: 0.1;
+.counter.blue:after{
+  border-bottom-color: #4accdb;
+  border-left-color: #4accdb;
 }
-
-.l-bg-cyan {
-    background: linear-gradient(135deg, #289cf5, #84c0ec) !important;
-    color: #fff;
+@media screen and (max-width:990px){
+  .counter{ margin-bottom: 40px; }
 }
-
-.l-bg-green {
-    background: linear-gradient(135deg, #23bdb8 0%, #43e794 100%) !important;
-    color: #fff;
-}
-
-.l-bg-orange {
-    background: linear-gradient(to right, #f9900e, #ffba56) !important;
-    color: #fff;
-}
-
-.l-bg-cyan {
-    background: linear-gradient(135deg, #289cf5, #84c0ec) !important;
-    color: #fff;
-} */
