--- a/src/app/adminboard/appointment/newappointment/newappointment.component.html
+++ b/src/app/adminboard/appointment/newappointment/newappointment.component.html
@@ -118,7 +118,7 @@
     <div class="row">
       <div class="form-group col">
         <label for="apLocation">Location:</label>
-        <input type="number" class="form-control" formControlName="apLocation">
+        <input type="text" class="form-control" formControlName="apLocation">
       </div>
       <div class="form-group col">
         <label for="apDeseaseDetails">Desease Details</label>
