--- a/src/app/adminboard/payments/paymentslist/paymentslist.component.html
+++ b/src/app/adminboard/payments/paymentslist/paymentslist.component.html
@@ -1,130 +1,136 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Payments List:</li>
+        <li class="breadcrumb-item active" aria-current="page">Payment List:</li>
     </ol>
-  </nav>
+</nav>
+
+<!-- <router-outlet></router-outlet> -->
+
+ <!-- A General Input Field Workd Also -->
+  <!-- <input type="text"  (keyup)="applyFilter($event)"> -->
+
+  <div class="row">
+    <mat-form-field class="col">
+      <mat-label>Search Your Data Here</mat-label>
+      <input matInput (keyup)="applyFilter($event)">
+    </mat-form-field>
   
-  
-  <!-- <div class="container d-flex justify-content-end mb-3">
-    <div class="btn btn-primary">Add New Appointment</div>
-  </div> -->
-  <div class="d-flex align-items-end flex-column">
-    <div class="btn btn-outline-primary mb-2">New Payments</div>
-   
   </div>
-  
-  
-  <!-- This table is a Jquery Datatable plugin -->
-  
-  <!-- // this method if for data table
-  // tuts: https://webdamn.com/how-to-use-datatables-in-angular-8/
-  // https://datatables.net/examples/index
-  import { DataTablesModule } from 'angular-datatables'; -->
-  
-  <h3 class="text-center">All Payments</h3>
-  
-  <div class="table-responsive mt-3">
-  <table id="table_id" class="display">
-      <thead>
-          <tr>
-              <th>Appointment id</th>
-              <th>Name</th>
-          </tr>
-      </thead>
-      <tbody>
-          <tr>
-              <td>Row 1 Data 1</td>
-              <td>Row 1 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 3</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-          <tr>
-              <td>MinhJ</td>
-              <td>Row 2 Data 2</td>
-          </tr>
-      </tbody>
-  </table>
+
+  <div class="mat-elevation-z8 table_wrapper">
+    <table mat-table [dataSource]="datasource" matSort>
+       <!-- Checkbox Column -->
+  <!-- <ng-container matColumnDef="select">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let row">
+      <mat-checkbox (change)="tableCheckbox(row.id, $event.checked)">
+      </mat-checkbox> -->
+      <!-- <mat-checkbox (click)="$event.stopPropagation()"
+                    (change)="$event ? selection.toggle(row) : null"
+                    [checked]="selection.isSelected(row)"
+                    [aria-label]="checkboxLabel(row)">
+      </mat-checkbox> -->
+    <!-- </td>
+  </ng-container> -->
+
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+        <td mat-cell class="text-center" *matCellDef="let row"> {{row.id}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="p_id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Patient ID:</th>
+        <td mat-cell class="text-center" *matCellDef="let row"> {{row.p_id}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="p_name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Patient Name: </th>
+        <td mat-cell class="text-center" *matCellDef="let row"> {{row.p_name}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="dept_id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Department: </th>
+        <td mat-cell class="text-center" *matCellDef="let row"> {{row.dept_id}}</td>
+      </ng-container>
+
+
+      <ng-container matColumnDef="doc_id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Doctor: </th>
+        <td mat-cell  class="text-center"  *matCellDef="let row"> {{row.doc_id}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="admission_date">
+        <th mat-header-cell *matHeaderCellDef> Admission Date: </th>
+        <td mat-cell  class="text-center" *matCellDef="let row"> {{row.admission_date}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="release_date">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Release Date: </th>
+        <td mat-cell  class="text-center" *matCellDef="let row"> {{row.release_date}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="doc_charge">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Doctor Fee: </th>
+        <td mat-cell class="text-center"  *matCellDef="let row"> {{row.dept_id}} </td>
+      </ng-container>
+      <ng-container matColumnDef="ambulance_charge">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Ambulance Fee: </th>
+        <td mat-cell  class="text-center" *matCellDef="let row"> {{row.ambulance_charge}} </td>
+      </ng-container>
+      <ng-container matColumnDef="med_charge">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Medicine Fee: </th>
+        <td mat-cell class="text-center"  *matCellDef="let row"> {{row.med_charge}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="test_charge">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Test Fee: </th>
+        <td mat-cell  class="text-center" *matCellDef="let row"> {{row.test_charge}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="ot_charge">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> OT Fee: </th>
+        <td mat-cell  class="text-center" *matCellDef="let row"> {{row.ot_charge}} </td>
+      </ng-container>
+      <ng-container matColumnDef="discount">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Discount(%): </th>
+        <td mat-cell  class="text-center" *matCellDef="let row"> {{row.discount}} </td>
+      </ng-container>
+      <ng-container matColumnDef="total_bill">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Total Bill: </th>
+        <td mat-cell  class="text-center" *matCellDef="let row"> {{row.total_bill}} </td>
+      </ng-container>
+
+
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <td mat-cell  class="text-center"  *matCellDef="let row">
+          <div class="d-flex justify-content-center align-items-center">
+            <button class="btn btn-success btn-sm me-1" (click)="edit(row)"
+            >Edit</button><br>
+            <!-- <button class="btn btn-info btn-sm me-1" (click)="upTableVal(row)" 
+            >Confirm</button><br> -->
+
+          <button class="btn btn-danger btn-sm">Delete</button>
+          </div>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      <!-- Row shown when there is no matching data. -->
+      <!-- <tr class="mat-row" *matNoDataRow>
+<td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+</tr> -->
+    </table>
   </div>
+  <mat-paginator [pageSizeOptions]="[10, 20,30, 100]" showFirstLastButtons
+    aria-label="Select page of users"></mat-paginator>
+
+
+
+
+    
+
+<!-- ==============================Modal====================================================== -->
