--- a/src/app/adminboard/patient/patientlist/patientlist.component.html
+++ b/src/app/adminboard/patient/patientlist/patientlist.component.html
@@ -273,4 +273,7 @@
       <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Save</button>
     </div> -->
   </ng-template>
+
+
+  <h1>Total Data: {{totalRows}}</h1>
   
