--- a/src/app/adminboard/pharmacy/pharmacy.component.html
+++ b/src/app/adminboard/pharmacy/pharmacy.component.html
@@ -1,1 +1,217 @@
-<p>pharmacy works!</p>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a routerLink="/admin">Dashboard</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Department</li>
+    </ol>
+  </nav>
+  
+  
+  <div class="container">
+    <div class="row">
+      <div class="col-4">
+  
+        <div class="bg-secondary mb-4">
+          <h6 class="p-3 text-white">Add new Medicine:</h6>
+        </div>
+        
+  
+        <form class="form" role="form" autocomplete="off" id="formLogin" novalidate=""
+          method="POST">
+          <div class="form-group">
+            <label for="">Department Name</label>
+            <input class="form-control" type="text" formControlName="dept_name" required minlength="3">
+  
+            <!-- <div class="text-danger" *ngIf="deptNameValue?.touched && userNameval?.invalid">
+              <div *ngIf="deptNameValue?.errors?.['required']">Fill The Field First</div>
+            </div> -->
+  
+            <!-- <div class="alert alert-danger " *ngIf="userNameval?.touched && userNameval?.invalid">
+              <div *ngIf="userNameval?.errors?.['minLength']">please put 3</div>
+            </div> -->
+  
+            <!-- <div class="alert alert-danger " *ngIf="docDeptForm.get('dept_name')?.touched && docDeptForm.get('dept_name')?.invalid">
+              <div *ngIf="docDeptForm.get('dept_name')?.errors.required"></div>
+            </div> -->
+  
+  
+            <!-- <div *ngIf="docDeptForm.get('dept_name')?.invalid && (docDeptForm.get('dept_name')?.dirty || docDeptForm.get('name')?.touched)">
+              <div *ngIf="docDeptForm.get('dept_name')?.errors">Name is required</div>
+            </div> -->
+  
+          </div><br>
+          <div class="form-group">
+            <label for="">Department Manager</label>
+            <input class="form-control" type="text" name="" id="" formControlName="dept_manager" required>
+  
+            <!-- <div class="text-danger"
+              *ngIf="docDeptForm.get('dept_manager')?.invalid && (docDeptForm.get('dept_manager')?.dirty || docDeptForm.get('dept_manager')?.touched)">
+              <div *ngIf="docDeptForm.get('dept_manager')?.errors?.['required']">Fill The Field First</div>
+            </div>
+   -->
+          </div>
+          <br>
+  
+          <div class="d-flex justify-content-center"><button type="submit"
+              class="btn btn-outline-dark btn-sm float-right d-flex justify-content-center" id="btnLogin"
+              (click)="createDept()">Create Department</button></div>
+  
+        </form>
+      </div>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+        <!-- Bootstrap or jquery Table -->
+        <!-- <table id="table_id" class="display compact" cellspacing="0" width="100%"> -->
+        <!-- <table> -->
+        <!-- <thead>
+            <tr>
+              <th>Department ID</th>
+              <th>Department Name</th>
+              <th>Department Manager</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let dept of deptList">
+              <td>{{dept.id}} </td>
+              <td>{{dept.dept_name}}</td>
+              <td>{{dept.dept_manager}}</td>
+              <td>
+                <button class="btn btn-outline-secondary me-2" (click)="EditDept(content, dept)">Edit</button>
+                <button class="btn btn-outline-danger" (click)="deleteDeptByID(dept.id)">Delete</button>
+              </td>
+            </tr>
+          </tbody>
+        </table> -->
+  
+  
+  
+      </div>
+    </div>
+  </div>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  <!-- ==============================Modal====================================================== -->
+  
+  <ng-template #content let-c="close" let-d="dismiss">
+    <div class="modal-header">
+      <h4 class="modal-title text-center" id="modal-basic-title">Edit Your Department</h4>
+      <button type="button" class="btn-close" aria-label="Close" (click)="d('Cross click')"></button>
+    </div>
+    <div class="modal-body">
+  
+      <h3 class="text-center">Update Department Information</h3>
+      <form [formGroup]="docDeptForm" class="form" role="form" autocomplete="off" id="formLogin" novalidate=""
+        method="POST">
+        <div class="form-group">
+          <label for="">Department Name</label>
+          <input class="form-control" type="text" formControlName="dept_name" required minlength="3">
+  
+          <div class="text-danger" *ngIf="deptNameValue?.touched && userNameval?.invalid">
+            <div *ngIf="deptNameValue?.errors?.['required']">Fill The Field First</div>
+          </div>
+  
+          <!-- <div class="alert alert-danger " *ngIf="userNameval?.touched && userNameval?.invalid">
+            <div *ngIf="userNameval?.errors?.['minLength']">please put 3</div>
+          </div> -->
+  
+          <!-- <div class="alert alert-danger " *ngIf="docDeptForm.get('dept_name')?.touched && docDeptForm.get('dept_name')?.invalid">
+            <div *ngIf="docDeptForm.get('dept_name')?.errors.required"></div>
+          </div> -->
+  
+  
+          <!-- <div *ngIf="docDeptForm.get('dept_name')?.invalid && (docDeptForm.get('dept_name')?.dirty || docDeptForm.get('name')?.touched)">
+            <div *ngIf="docDeptForm.get('dept_name')?.errors">Name is required</div>
+          </div> -->
+  
+        </div><br>
+        <div class="form-group">
+          <label for="">Department Manager</label>
+          <input class="form-control" type="text" name="" id="" formControlName="dept_manager" required>
+  
+          <div class="text-danger"
+            *ngIf="docDeptForm.get('dept_manager')?.invalid && (docDeptForm.get('dept_manager')?.dirty || docDeptForm.get('dept_manager')?.touched)">
+            <div *ngIf="docDeptForm.get('dept_manager')?.errors?.['required']">Fill The Field First</div>
+          </div>
+  
+        </div>
+        <br>
+  
+        <button class="btn btn-outline-success me-2" (click)="updateData()">Update</button>
+        <button class="btn btn-outline-secondary" (click)="d('Cross click')">Cancel</button>
+  
+      </form>
+  
+    </div>
+    <!-- <div class="modal-footer">
+      <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Save</button>
+    </div> -->
+  </ng-template>
+  
+  <h1>{{closeResult}}</h1>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  <!-- <table class="mat-elevation-z8" mat-table [dataSource]="deptList"> -->
+  
+  <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+  
+  <!-- Position Column -->
+  <!-- <ng-container matColumnDef="dept_id">
+      <th mat-header-cell *matHeaderCellDef>Department ID </th>
+      <td mat-cell *matCellDef="let deptList"> {{deptList.id}} </td>
+    </ng-container> -->
+  
+  <!-- Name Column -->
+  <!-- <ng-container matColumnDef="department_name">
+      <th mat-header-cell *matHeaderCellDef> Department Name </th>
+      <td mat-cell *matCellDef="let deptList"> {{deptList.dept_name}} </td>
+    </ng-container> -->
+  
+  <!-- Weight Column -->
+  <!-- <ng-container matColumnDef="department_name">
+      <th mat-header-cell *matHeaderCellDef> Department Manager </th>
+      <td mat-cell *matCellDef="let deptList"> {{deptList.dept_manager}} </td>
+    </ng-container> -->
+  
+  <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let deptList; columns: displayedColumns;"></tr>
+  </table> -->
