--- a/src/app/landingpage/header/header.component.html
+++ b/src/app/landingpage/header/header.component.html
@@ -36,8 +36,9 @@
             <a routerLink="/contact" class="nav-item nav-link bgph">Contact</a>
             <a routerLink="/admin" class="nav-item nav-link bgph">Amin Panel</a>
             <!-- <a class="nav-item nav-link bgph" (click)="adminPanel()">Amin Panel</a> -->
-            <a routerLink="/login" class="nav-item nav-link bgph">Sign In</a>
-            <a routerLink="/signup" class="nav-item nav-link bgph">Sign Up</a>
+            <a *ngIf="!checkLogin" routerLink="/login" class="nav-item nav-link bgph">Sign In</a>
+            <a *ngIf="!checkLogin" routerLink="/signup" class="nav-item nav-link bgph">Sign Up</a>
+            <a *ngIf="checkLogin" routerLink="/signup" class="nav-item nav-link bgph">Logout</a>
             <!-- <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                 <div class="dropdown-menu m-0">
