--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,19 +1,22 @@
 <div class="container p-5 m-5">
   <div class="row d-flex justify-content-center align-items-center h-100">
     <div class="col-md-9 col-lg-6 col-xl-5">
-      <img src="../../assets/images/hospital.jpg" class="img-fluid" alt="Hospital image">
+      <img
+        src="../../assets/images/hospital.jpg"
+        class="img-fluid"
+        alt="Hospital image"
+      />
     </div>
     <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-      <form>
-
-        <div class="form-group mb-5">
+      <form [formGroup]="loginForm" (submit)="checkLogin()">
+        <!-- <div class="form-group mb-5">
           <label for="uname">Select Role:</label>
           <select class="form-select" formControlName="appointment_type">
             <option value="1">User</option>
             <option value="2">Doctor</option>
             <option value="3">Admin</option>
           </select>
-        </div>
+        </div> -->
 
         <!-- <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
           <p class="lead fw-normal mb-0 me-3">Sign in with</p>
@@ -36,21 +39,36 @@
 
         <!-- Email input -->
         <div class="form-outline mb-4">
-          <input type="email" id="form3Example3" class="form-control form-control-lg"
-            placeholder="Enter a valid email address" />
-          <label class="form-label" for="form3Example3">Email address</label>
+          <label class="form-label" for="form3Example3">User Name:</label>
+          <input
+            type="email"
+            class="form-control form-control-lg"
+            placeholder="Enter Your Username"
+            formControlName="userName"
+          />
         </div>
 
         <!-- Password input -->
         <div class="form-outline mb-3">
-          <input type="password" id="form3Example4" class="form-control form-control-lg" placeholder="Enter password" />
           <label class="form-label" for="form3Example4">Password</label>
+          <input
+            type="password"
+            id="form3Example4"
+            class="form-control form-control-lg"
+            placeholder="Enter password"
+            formControlName="userPassword"
+          />
         </div>
 
         <div class="d-flex justify-content-between align-items-center">
           <!-- Checkbox -->
           <div class="form-check mb-0">
-            <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
+            <input
+              class="form-check-input me-2"
+              type="checkbox"
+              value=""
+              id="form2Example3"
+            />
             <label class="form-check-label" for="form2Example3">
               Remember me
             </label>
@@ -59,14 +77,19 @@
         </div>
 
         <div class="text-center text-lg-start mt-4 pt-2">
-          <button type="button" class="btn btn-primary btn-lg"
-            style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-          <p class="small fw-bold mt-2 pt-1 mb-0 lead">Don't have an account? <a routerLink="/signup"
-              class="link-danger">Register</a></p>
+          <button
+            type="submit"
+            class="btn btn-primary btn-lg"
+            style="padding-left: 2.5rem; padding-right: 2.5rem"
+          >
+            Login
+          </button>
+          <p class="small fw-bold mt-2 pt-1 mb-0 lead">
+            Don't have an account?
+            <a routerLink="/signup" class="link-danger">Register</a>
+          </p>
         </div>
-
       </form>
     </div>
   </div>
-
 </div>
