--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,60 +1,161 @@
 <div class="container my-3 py-3 px-3">
-    <div class="container px-5 ">
-        <form>
-            <h2 class="display-6 text-center mb-5 fw-semibold">Please Put Your Information For Signup:</h2>
+  <div class="container px-5">
+    <form [formGroup]="signupForm" (submit)="create()">
+      <h2 class="display-6 text-center mb-5 bg-info text-white">
+        Please Put Your Information For Signup:
+      </h2>
 
-            <div class="row mb-3">
-                <!-- Email input -->
-                <div class="form-outline col-6">
-                    <label class="form-label" for="form3Example3">Email address</label>
-                    <input type="email" id="form3Example3" class="form-control form-control-lg"
-                        placeholder="Enter a valid email address" />
-                   
-                </div>
+      <div class="row mb-3">
+        <!-- Email input -->
+        <div class="form-outline col-6">
+          <label class="form-label">User Name:</label>
+          <input
+            type="text"
+            class="form-control"
+            formControlName="userName"
+            placeholder="Choose An UserName"
+            maxlength="30"
+            
 
-                <!-- Password input -->
-                <div class="form-outline col-6">
-                    <label class="form-label" for="form3Example4">Password</label>
-                    <input type="password" id="form3Example4" class="form-control form-control-lg"
-                        placeholder="Enter password" />
-                    
-                </div>
-            </div>
+          />
+          <div class="text-danger" *ngIf="userNameVal?.invalid && (userNameVal?.touched || userNameVal?.dirty) ">
+            <div *ngIf="userNameVal?.errors?.['required']">Write Your UserName</div>
+            <div *ngIf="userNameVal?.errors?.['minlength']" class="text-info">UserName Should be atleast 5 charecters</div>
+            <div *ngIf="userNameVal?.errors?.['maxlength']">username Should not be greater than 20 charecters</div>
+          </div>
+        </div>
 
 
 
-            <div class="row mb-3">
-                <!-- Email input -->
-                <div class="form-outline col">
-                    <label class="form-label" for="form3Example3">Email address</label>
-                    <input type="email" id="form3Example3" class="form-control form-control-lg"
-                        placeholder="Enter a valid email address" />
-                  
-                </div>
-
-                <!-- Password input -->
-                <div class="form-outline col">
-                    <label class="form-label" for="form3Example4">Password</label>
-                    <input type="password" id="form3Example4" class="form-control form-control-lg"
-                        placeholder="Enter password" />
-                   
-                </div>
-            </div>
+<!--         
+          <div class="text-danger" *ngIf="userNameVal?.touched && userNameVal?.invalid" class="invalid-feedback">
+            <div *ngIf="userNameVal?.errors?.['required']">Fill The Field First</div>
+          </div> -->
 
 
 
 
 
-            <div class="text-center text-lg-start mt-4 pt-2 d-flex justify-content-center">
-                <button type="button" class="btn btn-outline-primary btn-lg me-3" style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
 
-                <button type="button" class="btn btn-outline-secondary btn-lg " style="padding-left: 2.5rem; padding-right: 2.5rem;"> Reset</button>
-            </div>
+        <div class="form-outline col-6">
+          <label class="form-label">Email:</label>
+          <input
+            type="email"
+            class="form-control"
+            placeholder="Enter a valid email address"
+            formControlName="email"
+            required
+          />
+          <div class="text-danger" *ngIf="email!.touched && email?.invalid">
+            <div *ngIf="email?.errors?.['required']">Input Your Mail Please!</div>
+            <div *ngIf="email?.errors?.['email']" class=" text-warning">Please Provide a valid Mail!</div>
+          </div>
+        </div>
+      </div>
 
+      <div class="row mb-3">
+        <!-- Email input -->
+        <div class="form-outline col">
+          <label class="form-label">First Name:</label>
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Your First Name"
+            formControlName="userFirstName"
+            required
+            maxlength="20"
+          />
+          <div class="text-danger" *ngIf="userFirstName!.touched && userFirstName?.invalid">
+            <div *ngIf="userFirstName!.errors?.['required']">Input Your First Name</div>
+          </div>
+        </div>
 
-            <div class="d-flex justify-content-center align-items-center">
-                <!-- Checkbox -->
-                <!-- <div class="form-check mb-0">
+        <!-- Password input -->
+        <div class="form-outline col">
+          <label class="form-label">Last Name:</label>
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Your Last Name"
+            formControlName="userLastName"
+            required
+            maxlength="20"
+          />
+          <div class="text-danger" *ngIf="userLastName!.touched && userLastName?.invalid && userLastName!.dirty">
+            <div *ngIf="userLastName!.errors?.['required']">Input Your Last Name</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row mb-3">
+        <!-- Email input -->
+        <div class="form-outline col">
+          <label class="form-label">Password:</label>
+          <input
+            type="password"
+            class="form-control"
+            placeholder="Enter Your Password"
+            formControlName="userPassword"
+            required
+          />
+          <div class="text-danger" *ngIf="password!.touched && password?.invalid">
+            <div *ngIf="password!.errors?.['required']">Input Your Password</div>
+          </div>
+          <div class="text-danger" *ngIf="confirmPassword!.touched && confirmPassword?.invalid">
+            <div *ngIf="confirmPassword!.errors?.['mustMatch']">Password Doesn't match</div>
+          </div>
+        </div>
+
+        <!-- Password input -->
+        <div class="form-outline col">
+          <label class="form-label">Confirm Password:</label>
+          <input
+            type="password"
+            class="form-control"
+            placeholder="Enter Your Cofnirm Password"
+            formControlName="confirmPassword"
+            required
+          />
+          <div *ngIf="confirmPassword!.errors?.['matchPassword']">
+            Passwords do not match
+          </div>
+
+          <div class="text-danger" *ngIf="confirmPassword!.touched && confirmPassword?.invalid">
+            <div *ngIf="confirmPassword!.errors?.['mustMatch']">Password Doesn't match</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="tacbox text-center mt-4 pt-2">
+        <input id="checkbox" type="checkbox" class="me-2" />
+        <label for="checkbox">
+          I agree to these <a href="#">Terms and Conditions</a>.</label
+        >
+      </div>
+
+      <div
+        class="text-center text-lg-start mt-4 mb-2 d-flex justify-content-center"
+      >
+        <button
+          type="submit"
+          class="btn btn-outline-primary btn-lg me-3"
+          style="padding-left: 2.5rem; padding-right: 2.5rem"
+        >
+          Login
+        </button>
+
+        <button
+          type="button"
+          class="btn btn-outline-secondary btn-lg"
+          style="padding-left: 2.5rem; padding-right: 2.5rem"
+        >
+          Reset
+        </button>
+      </div>
+
+      <div class="d-flex justify-content-center align-items-center">
+        <!-- Checkbox -->
+        <!-- <div class="form-check mb-0">
               <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
               <label class="form-check-label" for="form2Example3">
                 Remember me
@@ -62,37 +163,37 @@
             </div>
             <a href="#!" class="text-body">Forgot password?</a> -->
 
-                <div>
-                    <p class="small fw-bold mt-2 pt-1 mb-0 lead">Already have an account? <a routerLink="/login"
-                            class="link-danger">Please LogIn</a></p>
-                </div>
-            </div>
+        <div>
+          <p class="small fw-bold mt-2 pt-1 mb-0 lead">
+            Already have an account?
+            <a routerLink="/login" class="link-danger">Please LogIn</a>
+          </p>
+        </div>
+      </div>
 
+      <div class="divider d-lg-block align-items-center my-3">
+        <p class="text-center fw-bold mx-3 mb-0">Or</p>
+      </div>
 
+      <div class="d-flex justify-content-center">
+        <div
+          class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start"
+        >
+          <p class="lead fw-normal mb-0 me-3">Sign Up with</p>
 
-            <div class="divider d-lg-block align-items-center my-3">
-                <p class="text-center fw-bold mx-3 mb-0">Or</p>
-            </div>
+          <button type="button" class="btn btn-primary btn-floating mx-1">
+            <i class="fab fa-facebook-f"></i>
+          </button>
 
-            <div class="d-flex justify-content-center">
-                <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
-                    <p class="lead fw-normal mb-0 me-3">Sign Up with</p>
+          <button type="button" class="btn btn-primary btn-floating mx-1">
+            <i class="fab fa-twitter"></i>
+          </button>
 
-                    <button type="button" class="btn btn-primary btn-floating mx-1">
-                        <i class="fab fa-facebook-f"></i>
-                    </button>
-
-                    <button type="button" class="btn btn-primary btn-floating mx-1">
-                        <i class="fab fa-twitter"></i>
-                    </button>
-
-                    <button type="button" class="btn btn-primary btn-floating mx-1">
-                        <i class="fab fa-linkedin-in"></i>
-                    </button>
-                </div>
-            </div>
-
-
-        </form>
-    </div>
+          <button type="button" class="btn btn-primary btn-floating mx-1">
+            <i class="fab fa-linkedin-in"></i>
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
 </div>
