--- a/src/app/adminboard/pharmacy/createmed/createmed.component.html
+++ b/src/app/adminboard/pharmacy/createmed/createmed.component.html
@@ -68,7 +68,7 @@
 
                 <div class="d-flex justify-content-center"><button type="submit"
                         class="btn btn-success float-right d-flex justify-content-center" id="btnLogin"
-                        (click)="createMedItem()">Create Doctor</button>
+                        >Create Doctor</button>
                 </div>
 
 
