--- a/src/app/adminboard/pharmacy/pharmacy.component.html
+++ b/src/app/adminboard/pharmacy/pharmacy.component.html
@@ -6,54 +6,55 @@
   </nav>
   
   
-  <div class="container">
+
     <div class="row">
       <div class="col-4">
-  
         <div class="bg-secondary mb-4">
-          <h6 class="p-3 text-white">Add new Medicine:</h6>
+          <h6 class="bg-info p-3 text-white">Add new Medicine:</h6>
         </div>
-        
+
   
-        <form class="form" role="form" autocomplete="off" id="formLogin" novalidate=""
+        <form [formGroup]="medForm" class="form" role="form" autocomplete="off" id="formLogin" novalidate=""
           method="POST">
           <div class="form-group">
-            <label for="">Department Name</label>
-            <input class="form-control" type="text" formControlName="dept_name" required minlength="3">
-  
-            <!-- <div class="text-danger" *ngIf="deptNameValue?.touched && userNameval?.invalid">
-              <div *ngIf="deptNameValue?.errors?.['required']">Fill The Field First</div>
-            </div> -->
-  
-            <!-- <div class="alert alert-danger " *ngIf="userNameval?.touched && userNameval?.invalid">
-              <div *ngIf="userNameval?.errors?.['minLength']">please put 3</div>
-            </div> -->
-  
-            <!-- <div class="alert alert-danger " *ngIf="docDeptForm.get('dept_name')?.touched && docDeptForm.get('dept_name')?.invalid">
-              <div *ngIf="docDeptForm.get('dept_name')?.errors.required"></div>
-            </div> -->
-  
-  
-            <!-- <div *ngIf="docDeptForm.get('dept_name')?.invalid && (docDeptForm.get('dept_name')?.dirty || docDeptForm.get('name')?.touched)">
-              <div *ngIf="docDeptForm.get('dept_name')?.errors">Name is required</div>
-            </div> -->
-  
-          </div><br>
+            <label for="">Medicine Name:</label>
+            <input class="form-control" type="text" formControlName="med_name" required minlength="3">
+          </div>
+          <br>
+
           <div class="form-group">
-            <label for="">Department Manager</label>
-            <input class="form-control" type="text" name="" id="" formControlName="dept_manager" required>
-  
-            <!-- <div class="text-danger"
-              *ngIf="docDeptForm.get('dept_manager')?.invalid && (docDeptForm.get('dept_manager')?.dirty || docDeptForm.get('dept_manager')?.touched)">
-              <div *ngIf="docDeptForm.get('dept_manager')?.errors?.['required']">Fill The Field First</div>
-            </div>
-   -->
+            <label for="">Medicine Group Name:</label>
+            <input class="form-control" type="text" formControlName="med_group_name" required minlength="3">
+          </div>
+          <br>
+
+          <div class="form-group">
+            <label for="">Medicine Type:</label>
+            <select class="form-select" formControlName="med_type" #dept (change)="medicineType(dept.value)">
+              <option value="tab">Tablets</option>
+              <option value="inj">Injection</option>
+              <option value="saline">Saline</option>
+              <option value="others">Others</option>
+            </select>
+          </div>
+          <br>
+
+
+          <div class="form-group">
+            <label for="">Medicine Weight:</label>
+            <input class="form-control" type="text" name="" id="" formControlName="med_weight" required>
+          </div>
+          <br>
+
+          <div class="form-group">
+            <label for="">Medicine Description:</label>
+            <textarea class="form-control" formControlName="med_description"></textarea>
           </div>
           <br>
   
           <div class="d-flex justify-content-center"><button type="submit"
               class="btn btn-outline-dark btn-sm float-right d-flex justify-content-center" id="btnLogin"
-              (click)="createDept()">Create Department</button></div>
+              (click)="create()">Create Medicine</button></div>
   
         </form>
       </div>
@@ -61,40 +62,74 @@
   
   
   
-  
-  
-  
-  
-  
         <!-- Bootstrap or jquery Table -->
-        <!-- <table id="table_id" class="display compact" cellspacing="0" width="100%"> -->
-        <!-- <table> -->
-        <!-- <thead>
-            <tr>
-              <th>Department ID</th>
-              <th>Department Name</th>
-              <th>Department Manager</th>
-              <th>Actions</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let dept of deptList">
-              <td>{{dept.id}} </td>
-              <td>{{dept.dept_name}}</td>
-              <td>{{dept.dept_manager}}</td>
-              <td>
-                <button class="btn btn-outline-secondary me-2" (click)="EditDept(content, dept)">Edit</button>
-                <button class="btn btn-outline-danger" (click)="deleteDeptByID(dept.id)">Delete</button>
-              </td>
-            </tr>
-          </tbody>
-        </table> -->
+        <div class="table_wrapper col-8">
+
+          <mat-form-field>
+            <mat-label>Search Your Data Here</mat-label>
+            <input matInput (keyup)="applyFilter($event)">
+          </mat-form-field>
+          <!-- A General Input Field Workd Also -->
+          <!-- <input type="text"  (keyup)="applyFilter($event)"> -->
+          
   
+          <div class="mat-elevation-z8">
+            <table mat-table [dataSource]="datasource" matSort class="table-stripped">
+              <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+              </ng-container>
+  
+              <ng-container matColumnDef="med_name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Med Name </th>
+                <td mat-cell *matCellDef="let row"> {{row.med_name}}</td>
+              </ng-container>
+  
+              <ng-container matColumnDef="med_group_name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Med Group Name</th>
+                <td mat-cell *matCellDef="let row"> {{row.med_group_name}} </td>
+              </ng-container>
+
+              <ng-container matColumnDef="med_type">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Med Type</th>
+                <td mat-cell *matCellDef="let row"> {{row.med_type}} </td>
+              </ng-container>
+              <ng-container matColumnDef="med_weight">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Med Weight</th>
+                <td mat-cell *matCellDef="let row"> {{row.med_weight}} </td>
+              </ng-container>
+              <ng-container matColumnDef="med_description">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Description</th>
+                <td mat-cell *matCellDef="let row"> {{row.med_description}} </td>
+              </ng-container>
+
+
+
+
+
+              <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Department Manager </th>
+                <td mat-cell *matCellDef="let row"> <button class="btn btn-info me-1 btn-sm"
+                    (click)="edit( row)">Edit</button>|
+                  <button class="btn btn-danger btn-sm ms-1" (click)="deleteByID(row.id)">Delete</button>
+                </td>
+              </ng-container>
+  
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  
+              <!-- Row shown when there is no matching data. -->
+              <!-- <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr> -->
+            </table>
+          </div>
+        </div>
   
   
       </div>
-    </div>
-  </div>
+
+
   
   
   
@@ -121,7 +156,7 @@
   
   <!-- ==============================Modal====================================================== -->
   
-  <ng-template #content let-c="close" let-d="dismiss">
+  <!-- <ng-template #content let-c="close" let-d="dismiss">
     <div class="modal-header">
       <h4 class="modal-title text-center" id="modal-basic-title">Edit Your Department</h4>
       <button type="button" class="btn-close" aria-label="Close" (click)="d('Cross click')"></button>
@@ -137,7 +172,7 @@
   
           <div class="text-danger" *ngIf="deptNameValue?.touched && userNameval?.invalid">
             <div *ngIf="deptNameValue?.errors?.['required']">Fill The Field First</div>
-          </div>
+          </div> -->
   
           <!-- <div class="alert alert-danger " *ngIf="userNameval?.touched && userNameval?.invalid">
             <div *ngIf="userNameval?.errors?.['minLength']">please put 3</div>
@@ -152,7 +187,7 @@
             <div *ngIf="docDeptForm.get('dept_name')?.errors">Name is required</div>
           </div> -->
   
-        </div><br>
+        <!-- </div><br>
         <div class="form-group">
           <label for="">Department Manager</label>
           <input class="form-control" type="text" name="" id="" formControlName="dept_manager" required>
@@ -170,14 +205,14 @@
   
       </form>
   
-    </div>
+    </div> -->
     <!-- <div class="modal-footer">
       <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Save</button>
     </div> -->
-  </ng-template>
+  <!-- </ng-template>
   
   <h1>{{closeResult}}</h1>
-  
+   -->
   
   
   
