--- a/src/app/adminboard/pharmacy/supplier/supplier.component.html
+++ b/src/app/adminboard/pharmacy/supplier/supplier.component.html
@@ -1,1 +1,150 @@
-<p>supplier works!</p>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Medicine Report</li>
+    </ol>
+</nav>
+
+<ngb-accordion [closeOthers]="true" activeIds="0">
+	<ngb-panel id="static-1">
+        <ng-template ngbPanelTitle>
+			<h6 class="text-right">Add New Supplier Information</h6>
+		</ng-template>
+		<ng-template ngbPanelContent>
+            <form [formGroup]="supplierForm">
+                <div class="row">
+            
+                  <div class="form-group col">
+                    <label for="">Supllier Company:</label>
+                    <input
+                      class="form-control"
+                      type="text"
+                      name=""
+                      id=""
+                      formControlName="sup_company_name"
+                    />
+                  </div>
+                  <div class="form-group col">
+                    <label for="">Location:</label>
+                    <input
+                      class="form-control"
+                      type="text"
+                      name=""
+                      id=""
+                      formControlName="sup_location"
+                    />
+                  </div>
+                </div>
+            
+                <div class="row">
+                  <div class="form-group col">
+                    <label for="">Phone:</label>
+                    <input
+                      class="form-control"
+                      type="text"
+                      name=""
+                      id=""
+                      formControlName="sup_phone"
+                    />
+                  </div>
+            
+                  <div class="form-group col">
+                    <label for="">Email:</label>
+                    <input
+                      class="form-control"
+                      type="text"
+                      name=""
+                      id=""
+                      formControlName="sup_email"
+                    />
+                </div>
+                </div>
+
+                <br /><br />
+            
+                <div class="d-flex justify-content-center">
+                  <button
+                    type="submit"
+                    class="btn btn-info btn-lg float-right d-flex justify-content-center me-2"
+                    id="btnLogin"
+                    (click)="getmethod()"
+                  >
+                    Add in Stock
+                  </button>
+            
+                  <button
+                    class="btn btn-success btn-lg float-right d-flex justify-content-center"
+                    id="btnLogin"
+                    routerLink="/admin/doctors"
+                  >
+                    Medicine List
+                  </button>
+                </div>
+              </form>
+            
+		</ng-template>
+	</ngb-panel>
+</ngb-accordion>
+
+
+<div class="heading bg-info">
+  <h3 class="text-light text-center p-2 mt-4 mb-2">Supplier Lists</h3>
+</div>
+
+
+
+ <!-- Bootstrap or jquery Table -->
+ <div class="table_wrapper">
+
+  <mat-form-field>
+    <mat-label>Search Your Data Here</mat-label>
+    <input matInput (keyup)="applyFilter($event)">
+  </mat-form-field>
+  <!-- A General Input Field Workd Also -->
+  <!-- <input type="text"  (keyup)="applyFilter($event)"> -->
+  
+
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="datasource" matSort class="table-stripped">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="sup_company_name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Company Name: </th>
+        <td mat-cell *matCellDef="let row"> {{row.sup_company_name}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="sup_location">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Location:</th>
+        <td mat-cell *matCellDef="let row"> {{row.sup_location}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="sup_phone">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Phone</th>
+        <td mat-cell *matCellDef="let row"> {{row.sup_phone}} </td>
+      </ng-container>
+      <ng-container matColumnDef="sup_email">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Phone</th>
+        <td mat-cell *matCellDef="let row"> {{row.sup_email}} </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Department Manager </th>
+        <td mat-cell *matCellDef="let row"> <button class="btn btn-info me-1 btn-sm"
+            (click)="edit( row)">Edit</button>|
+          <button class="btn btn-danger btn-sm ms-1" (click)="deleteByID(row.id)">Delete</button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      <!-- Row shown when there is no matching data. -->
+      <!-- <tr class="mat-row" *matNoDataRow>
+<td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+</tr> -->
+    </table>
+  </div>
+</div>
